<resources>
    <string name="app_name">Stockeate</string>
    <string name="invalid_mail">Ingrese mail valido</string>
    <string name="invalid_password">Ingrese un password mayor a 6 digitos</string>
    <string name="title_activity_menu2">menu2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_aplication_id" translatable="false">203316054729521</string>
    <string name="facebook_login_protocol_schema" translatable="false">fb203316054729521</string>

    <string name="menu_home">Home</string>
    <string name="menu_lista_compras">Lista de compras</string>
    <string name="menu_ubicacion">Ubicacion</string>
    <string name="menu_escanear_codigos_barra">Escanear codigos de barra</string>
    <string name="menu_promocion">Promociones</string>
    <string name="menu_actualizar_precios">Actualizar precios</string>
    <string name="menu_nuevo_local">Nuevo Comercio</string>
    <string name="title_activity_como_llegar">Map</string>

    <string-array name="Locales">
        <item>Local</item>
        <item>Hipermercado Anselmi</item>
        <item>Careglio Hnos Castelli</item>
        <item>El norte</item>
        <item>Careglio Hnos Sarmiento</item>
        <item>Pingüino</item>
    </string-array>

    <string-array name="Tipo_promocion">
        <item>Tipo promocion</item>
        <item>2x1</item>
        <item>3x2</item>
    </string-array>

    <string-array name="Provincias">
        <item>Provincias</item>
        <item>Buenos Aires</item>
        <item>Córdoba</item>
    </string-array>

    <string-array name="Localidades">
        <item>Localidades</item>
        <item>Cordoba</item>
        <item>Mar del plata</item>
        <item>San Francisco</item>
    </string-array>

</resources>